Body text spacing fixes.

--- a/assets/css/tralla.css
+++ b/assets/css/tralla.css
@@ -43,7 +43,7 @@ h2 {
 	color: var(--b-header-color);
 }
 
-h2:not(:first-child) {
+h1:not(:first-child), h2:not(:first-child), h3:not(:first-child) {
 	margin-top: 2rem;
 }
 
@@ -57,6 +57,20 @@ h1 {
 	font-size: 1.8rem;
 	text-transform: uppercase;
 	color: var(--b-black-color);
+}
+
+h3 {
+	font-family: Futura, "Jost", sans-serif;
+	font-weight: normal;
+	font-size: 1rem;
+	color: var(--b-black-color);
+}
+
+.b-body-text > p:first-child ,
+.b-body-text > h1:first-child,
+.b-body-text > h2:first-child,
+.b-body-text > h3 p:first-child {
+	margin-top: 0;
 }
 
 /* #endregion */
@@ -388,6 +402,7 @@ a {
 	text-transform: uppercase;
 	font-size: 0.8rem;
 	color: var(--b-header-color);
+	margin-top: 1rem;
 }
 
 .b-inline-list {
